// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test of component of Home Home component initial dispatches the \`cardsPhotosRequestAction()\` method it receives from props 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <Memo()
    filters={Array []}
    navTopItemActive={2}
    onFilterItemValue={[Function]}
  />
  <Memo()
    cards={Array []}
    onSearchTagValue={[Function]}
  />
  <div
    className="cards__text-empty"
    data-test="CardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component initial dispatches the \`getPaginationChange()\` method it receives from props 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <Memo()
    filters={Array []}
    navTopItemActive={2}
    onFilterItemValue={[Function]}
  />
  <Memo()
    cards={Array []}
    onSearchTagValue={[Function]}
  />
  <div
    className="cards__text-empty"
    data-test="CardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component initial renders Error if \`totalCards\` > \`cardsData.per_page\` 1`] = `
<div
  className="App"
>
  <div
    className="search"
  >
    <span
      className="ant-input-search search__input ant-input-affix-wrapper"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <input
        className="ant-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Wallpapers"
        style={null}
        type="text"
        value="wallpapers"
      />
      <span
        className="ant-input-suffix"
      >
        <i
          aria-label="icon: search"
          className="anticon anticon-search ant-input-search-icon"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="search"
            fill="currentColor"
            focusable="false"
            height="1em"
            key="svg-search"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              key="svg-search-svg-0"
            />
          </svg>
        </i>
      </span>
    </span>
  </div>
  <ul
    className="nav-top"
  />
  <ul
    className="photo-card-list"
    data-test="photoCardList"
  />
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component initial renders with error 1`] = `
<div
  className="error-text"
  data-test="errorText"
>
  Error loading photolisting
</div>
`;

exports[`Test of component of Home Home component initial renders with initial props 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <Memo()
    filters={Array []}
    navTopItemActive={2}
    onFilterItemValue={[Function]}
  />
  <Memo()
    cards={Array []}
    onSearchTagValue={[Function]}
  />
  <div
    className="cards__text-empty"
    data-test="CardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component initial renders with loading 1`] = `
<div
  className="App"
>
  <Memo()
    className="spinner"
    data-test="spinner"
  />
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <Memo()
    filters={Array []}
    navTopItemActive={2}
    onFilterItemValue={[Function]}
  />
  <div
    className="cards__text-empty"
    data-test="CardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component initial renders without loading 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <Memo()
    filters={Array []}
    navTopItemActive={2}
    onFilterItemValue={[Function]}
  />
  <Memo()
    cards={Array []}
    onSearchTagValue={[Function]}
  />
  <div
    className="cards__text-empty"
    data-test="CardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component with content renders without filters for NavTop 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <Memo()
    filters={Array []}
    navTopItemActive={2}
    onFilterItemValue={[Function]}
  />
  <Memo()
    cards={Array []}
    onSearchTagValue={[Function]}
  />
  <div
    className="cards__text-empty"
    data-test="CardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Mount tests Test method of tags 1`] = `
<div
  className="App"
>
  <div
    className="search"
  >
    <span
      className="ant-input-search search__input ant-input-affix-wrapper"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <input
        className="ant-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Wallpapers"
        style={null}
        type="text"
        value="wallpapers"
      />
      <span
        className="ant-input-suffix"
      >
        <i
          aria-label="icon: search"
          className="anticon anticon-search ant-input-search-icon"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="search"
            fill="currentColor"
            focusable="false"
            height="1em"
            key="svg-search"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              key="svg-search-svg-0"
            />
          </svg>
        </i>
      </span>
    </span>
  </div>
  <ul
    className="nav-top"
  >
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="0"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Editorial
      </div>
    </li>
    <li
      className="nav-top__item nav-top__item_border-right"
      data-test="navTopItem"
      key="1"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Following
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="2"
    >
      <div
        className="ant-tag ant-tag-purple"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Wallpapers
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="3"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Textures & Patterns
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="4"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Nature
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="5"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Current Events
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="6"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Architecture
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="7"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Business & Work
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="8"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Animals
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="9"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Travel
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="10"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Fashion
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="11"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Food & Drink
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="12"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Spirituality
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="13"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Experimental
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="14"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        People
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="15"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Health
      </div>
    </li>
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="16"
    >
      <div
        className="ant-tag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Arts & Culture
      </div>
    </li>
  </ul>
  <ul
    className="photo-card-list"
    data-test="photoCardList"
  />
  <div
    className="cards__text-empty"
    data-test="CardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;
